<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar_lower">
    <!-- android:background="?attr/colorPrimary"-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="#1719d7"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />

            </android.support.design.widget.AppBarLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/areaChooser"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:entries="@array/areaList"
                        android:tint="?attr/colorControlNormal"></Spinner>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_location_icon" />

                    <TextView
                        android:id="@+id/cityText"
                        style="?android:attr/textAppearanceMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:textColor="@color/text_color"
                        android:textSize="20sp"
                        android:textStyle="bold"></TextView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/condIcon"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_centerHorizontal="true" />

                    <TextView
                        android:id="@+id/skydesc"
                        style="?android:attr/textAppearanceMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:textColor="@color/text_color"
                        android:textStyle="bold"></TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="getForeCast"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/temp"
                        style="@style/tempStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/text_color"
                        android:textSize="100sp"></TextView>

                    <TextView
                        android:id="@+id/unittemp"
                        style="?android:attr/textAppearanceMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@id/temp"
                        android:text="@string/unitTemp"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/unitemp"></TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lastUpdate"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/weatherAttributeTextSize"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/publishedTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/weatherAttributeTextSize"
                        android:textStyle="italic" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/windSpeed"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/weatherAttributeTextSize"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/windSpeed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/weatherAttributeTextSize"
                        android:textStyle="italic" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/windDirection"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/weatherAttributeTextSize"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/windDeg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/weatherAttributeTextSize"
                        android:textStyle="italic" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunset"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/weatherAttributeTextSize"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sunsetTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/weatherAttributeTextSize"
                        android:textStyle="italic" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunrise"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/weatherAttributeTextSize"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sunriseTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/weatherAttributeTextSize"
                        android:textStyle="italic" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />
            </LinearLayout>
        </LinearLayout>
</ScrollView>